Bug 105467 - EDITING: Formcontrols - properties got an empty tab without any property
Summary: EDITING: Formcontrols - properties got an empty tab without any property
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.3.0.2 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-serie-commits Form-Controls
  Show dependency treegraph
 
Reported: 2017-01-21 17:13 UTC by Robert Großkopf
Modified: 2017-05-10 03:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Shows a fourth tab in control-properties, but now content in this tab (13.71 KB, image/png)
2017-01-21 17:13 UTC, Robert Großkopf
Details
Open form and have a look at properties of textbox - 4th tab since LO 5.3 (10.79 KB, application/vnd.oasis.opendocument.database)
2017-01-21 17:14 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2017-01-21 17:13:19 UTC
Created attachment 130598 [details]
Shows a fourth tab in control-properties, but now content in this tab

Open the attached screenshot.
You could see the properties of a textbox.
There is a forth tab, containing no description, only "..." if you will open it.

Tested with LO 5.3.0.2, but have seen this before in LO 5.3.0 beta.

My System: OpenSUSE 42.1 64bit rpm Linux
Comment 1 Robert Großkopf 2017-01-21 17:14:44 UTC
Created attachment 130599 [details]
Open form and have a look at properties of textbox - 4th tab since LO 5.3
Comment 2 Xisco Faulí 2017-01-21 17:40:07 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2016-11-05 20:28:27 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-11-07 21:04:50 (GMT)
commit 64a708cba9b954afe3331f63c58218eb53b3d0ce (patch)
tree ddc1bea3b63f32a1c6d377c1d1dd7aee0803fb70
parent f01c49c4a89ecad2376fd0023625186e5cac642e (diff)
Revert "Reverts a commit series that cripple windows ci."
with addition of...

- svxlo-SvxColorListBox
+ svxcorelo-SvxColorListBox

This reverts commit db380aab1063e8a5e40111c40ee9f7921aa82601.

Adding Cc: to Caolán McNamara
Comment 3 Commit Notification 2017-01-24 15:52:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d92b12604b644195328b89cb9355cd4fc4bc3e2d

tdf#105467 new color widget doesn't support XStringListControl

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2017-01-24 15:53:41 UTC
backport for 5-3 in gerrit
Comment 5 Commit Notification 2017-01-26 13:22:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b97abc651d22c0657c54713fa21b98604d7a74ea&h=libreoffice-5-3

tdf#105467 new color widget doesn't support XStringListControl

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.