tdf#105467 new color widget doesn't support XStringListControl

so this threw and mangled the dialog. New color dialog doesn't need
to be told the name of colors, it figures that out itself.

Change-Id: I89382b6b26312fc90c967620c654ea611cbd9616
(cherry picked from commit d92b12604b644195328b89cb9355cd4fc4bc3e2d)